adjustments w.r.t. the repo renaming

--- a/source/index.html
+++ b/source/index.html
@@ -24,7 +24,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg-8">
 
-                <h1>haeley-<strong>template</strong></h1>
+                <h1>@haeley/<strong>template</strong></h1>
                 <p class="lead">Test Page for Development</p>
                 <p>// about:
                     version <code id="version">version</code>,
